--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.quizz">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Quizz">
+        android:theme="@style/Theme.Quizz"
+        android:requestLegacyExternalStorage="true">
         <activity
-            android:name=".Statistics"
-            android:parentActivityName=".MainActivity"
+            android:name=".view.GameActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".view.ChooseCategoryActivity"
+            android:exported="true" />
+        <activity
+            android:name=".view.StatisticsActivity"
+            android:exported="true"
+            android:parentActivityName=".view.MainMenuActivity" />
+        <activity
+            android:name=".view.MainMenuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +31,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
