--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         android:maxSdkVersion="30"/>
 
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+    <uses-permission android:name="android.permission.LOCAL_MAC_ADDRESS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
