--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,11 @@ dependencies {
 
     implementation fileTree(dir: 'C:\\Users\\luism\\StudioProjects\\quixel\\app\\libs', include: ['*.aar', '*.jar'], exclude: [])
     def fragment_version = "1.4.0"
+    def activity_version = "1.4.0"
 
     implementation "androidx.fragment:fragment:$fragment_version"
+    implementation "androidx.activity:activity:$activity_version"
+
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -49,6 +52,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+
+
 
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
