--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation fileTree(dir: 'C:\\Users\\luism\\AndroidStudioProjects\\quixel\\app\\libs', include: ['*.aar', '*.jar'], exclude: [])
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    implementation 'com.google.code.gson:gson:2.8.7'
 
     testImplementation 'junit:junit:4.+'
 
