--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation fileTree(dir: 'D:\\AndroidStudioProjects\\quizz_project\\app\\libs', include: ['*.aar', '*.jar'], exclude: [])
-    implementation fileTree(dir: 'C:\\Users\\luism\\AndroidStudioProjects\\quixel\\app\\libs', include: ['*.aar', '*.jar'], exclude: [])
+    implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.0-M1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
